fix: correct z-index for ui-splitbar

--- a/src/ui-layout.css
+++ b/src/ui-layout.css
@@ -24,7 +24,7 @@
   background-color: #ffffff;
   right: auto;
   position: absolute;
-  z-index: 1010;
+  z-index: 1;
 }
 
 .ui-layout-row > .ui-splitbar{
